<resources>
    <string name="app_name">Locations</string>

    <string name="name">Enter Your Name: </string>
    <string name="confirm">Confirm</string>
    <string name="welcome">Welcome </string>
    <string name="create">Create</string>
    <string name="disc">Disconnect</string>
    <string name="view">View</string>
    <string name="join">Join</string>
    <string name="dismiss">Dismiss</string>
    <string name="groupname">Enter a groupname</string>
    <string name="OK">OK</string>
    <string name="back">Back</string>
    <string name="conCreate">CREATE</string>
    <string name="group">Group: </string>
    <string name="groupfull">GROUP IS CURRENTLY FULL!</string>
    <string name="nogroup"> No Group Selected</string>
    <string name="ok">Ok</string>
    <string name="leave">Leave</string>
    <string name="left">Left Group: </string>
    <string name="joined">Joined Group: </string>


<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">Map</string>
</resources>
